--- a/Versuch8/streetplanner.ui
+++ b/Versuch8/streetplanner.ui
@@ -24,7 +24,21 @@
        <property name="verticalSpacing">
         <number>4</number>
        </property>
+       <item row="4" column="0">
+        <widget class="QPushButton" name="pushButton_3">
+         <property name="text">
+          <string>Test Draw Map</string>
+         </property>
+        </widget>
+       </item>
        <item row="3" column="0">
+        <widget class="QPushButton" name="pushButton_2">
+         <property name="text">
+          <string>Test Draw City</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -36,13 +50,6 @@
           </size>
          </property>
         </spacer>
-       </item>
-       <item row="0" column="0" alignment="Qt::AlignTop">
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>Stadt</string>
-         </property>
-        </widget>
        </item>
        <item row="1" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
         <widget class="QLineEdit" name="lineEdit">
@@ -58,8 +65,29 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="2" rowspan="3">
+       <item row="0" column="0" alignment="Qt::AlignTop">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Stadt</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="2" rowspan="7">
         <widget class="QGraphicsView" name="graphicsView"/>
+       </item>
+       <item row="5" column="0">
+        <widget class="QPushButton" name="pushButton_4">
+         <property name="text">
+          <string>Test Draw Street</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QPushButton" name="pushButton_5">
+         <property name="text">
+          <string>Test Street in Map</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -81,7 +109,7 @@
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
