--- a/Versuch8/streetplanner.ui
+++ b/Versuch8/streetplanner.ui
@@ -24,21 +24,24 @@
        <property name="verticalSpacing">
         <number>4</number>
        </property>
-       <item row="4" column="0">
+       <item row="9" column="0">
         <widget class="QPushButton" name="pushButton_3">
          <property name="text">
           <string>Test Draw Map</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
-        <widget class="QPushButton" name="pushButton_2">
-         <property name="text">
-          <string>Test Draw City</string>
+       <item row="1" column="2" rowspan="12">
+        <widget class="QGraphicsView" name="graphicsView"/>
+       </item>
+       <item row="1" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="placeholderText">
+          <string>Stadt</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="12" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -51,20 +54,6 @@
          </property>
         </spacer>
        </item>
-       <item row="1" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
-        <widget class="QLineEdit" name="lineEdit">
-         <property name="placeholderText">
-          <string>Stadt</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0" colspan="2">
-        <widget class="QPushButton" name="pushButton">
-         <property name="text">
-          <string>Neue Stadt</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="0" alignment="Qt::AlignTop">
         <widget class="QLabel" name="label">
          <property name="text">
@@ -72,20 +61,48 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="2" rowspan="7">
-        <widget class="QGraphicsView" name="graphicsView"/>
+       <item row="11" column="0">
+        <widget class="QPushButton" name="pushButton_5">
+         <property name="text">
+          <string>Test Street in Map</string>
+         </property>
+        </widget>
        </item>
-       <item row="5" column="0">
+       <item row="10" column="0">
         <widget class="QPushButton" name="pushButton_4">
          <property name="text">
           <string>Test Draw Street</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
-        <widget class="QPushButton" name="pushButton_5">
+       <item row="8" column="0">
+        <widget class="QPushButton" name="pushButton_2">
          <property name="text">
-          <string>Test Street in Map</string>
+          <string>Test Draw City</string>
+         </property>
+         <property name="checkable">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="0">
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Test Slot</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QCheckBox" name="checkBox">
+         <property name="text">
+          <string>Toggle Test Buttons</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QPushButton" name="pushButton_6">
+         <property name="text">
+          <string>Add City</string>
          </property>
         </widget>
        </item>
