--- a/Versuch8/streetplanner.ui
+++ b/Versuch8/streetplanner.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>323</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -24,24 +24,14 @@
        <property name="verticalSpacing">
         <number>4</number>
        </property>
-       <item row="9" column="0">
-        <widget class="QPushButton" name="pushButton_3">
+       <item row="3" column="0">
+        <widget class="QPushButton" name="pushButton_6">
          <property name="text">
-          <string>Test Draw Map</string>
+          <string>Add City</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="2" rowspan="12">
-        <widget class="QGraphicsView" name="graphicsView"/>
-       </item>
-       <item row="1" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
-        <widget class="QLineEdit" name="lineEdit">
-         <property name="placeholderText">
-          <string>Stadt</string>
-         </property>
-        </widget>
-       </item>
-       <item row="12" column="0">
+       <item row="13" column="0">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -54,24 +44,20 @@
          </property>
         </spacer>
        </item>
-       <item row="0" column="0" alignment="Qt::AlignTop">
-        <widget class="QLabel" name="label">
+       <item row="1" column="2" rowspan="13">
+        <widget class="QGraphicsView" name="graphicsView"/>
+       </item>
+       <item row="9" column="0">
+        <widget class="QPushButton" name="pushButton_3">
          <property name="text">
+          <string>Test Draw Map</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" alignment="Qt::AlignLeft|Qt::AlignTop">
+        <widget class="QLineEdit" name="lineEdit">
+         <property name="placeholderText">
           <string>Stadt</string>
-         </property>
-        </widget>
-       </item>
-       <item row="11" column="0">
-        <widget class="QPushButton" name="pushButton_5">
-         <property name="text">
-          <string>Test Street in Map</string>
-         </property>
-        </widget>
-       </item>
-       <item row="10" column="0">
-        <widget class="QPushButton" name="pushButton_4">
-         <property name="text">
-          <string>Test Draw Street</string>
          </property>
         </widget>
        </item>
@@ -85,10 +71,10 @@
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
-        <widget class="QPushButton" name="pushButton">
+       <item row="11" column="0">
+        <widget class="QPushButton" name="pushButton_5">
          <property name="text">
-          <string>Test Slot</string>
+          <string>Test Street in Map</string>
          </property>
         </widget>
        </item>
@@ -99,10 +85,31 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <widget class="QPushButton" name="pushButton_6">
+       <item row="0" column="0" alignment="Qt::AlignTop">
+        <widget class="QLabel" name="label">
          <property name="text">
-          <string>Add City</string>
+          <string>Stadt</string>
+         </property>
+        </widget>
+       </item>
+       <item row="7" column="0">
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Test Slot</string>
+         </property>
+        </widget>
+       </item>
+       <item row="10" column="0">
+        <widget class="QPushButton" name="pushButton_4">
+         <property name="text">
+          <string>Test Draw Street</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="0">
+        <widget class="QPushButton" name="pushButton_7">
+         <property name="text">
+          <string>Fill Map</string>
          </property>
         </widget>
        </item>
